--- a/styles/index.css
+++ b/styles/index.css
@@ -8,13 +8,13 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: #f5f5f5;
-  color: #333;
+  background-color: #f1ec62;
+  color: #020808f1;
   line-height: 1.6;
 }
 
 header {
-  background-color: #222;
+  background-color: #2403de;
   color: white;
   padding: 1rem;
   display: flex;
@@ -81,14 +81,14 @@ main h2 {
 }
 
 .card {
-  background-color: white;
+  background-color: rgb(157, 244, 196);
   border-radius: 8px;
   border: 1px solid #ccc;
   overflow: hidden;
 }
 
 .card-heading {
-  background-color: #222;
+  background-color: #2906ef;
   color: white;
   padding: 1rem;
   text-align: center;
@@ -128,22 +128,22 @@ main h2 {
 }
 
 .certificate-card {
-  background-color: #f9f9f9;
+  background-color: #740e0e;
   padding: 1rem;
   border-radius: 8px;
   text-align: center;
-  border: 2px solid #ccc;
+  border: 2px solid #d6c6c6;
 }
 
 .certificate-card.completed {
-  border-color: #28a745;
-  background-color: #e6f4ea;
+  border-color: #a20013;
+  background-color: #f5f9f8;
 }
 
 .badge {
   margin-top: 0.5rem;
   font-weight: bold;
-  color: #28a745;
+  color: #084615;
 }
 
 .credit-count {
@@ -153,7 +153,7 @@ main h2 {
 }
 
 footer {
-  background-color: #222;
+  background-color: #2004c1;
   color: white;
   text-align: center;
   padding: 1.5rem;
