--- a/styles/index.css
+++ b/styles/index.css
@@ -88,7 +88,7 @@ main h2 {
 }
 
 .card-heading {
-  background-color: #2906ef;
+  background-color: #2504e1;
   color: white;
   padding: 1rem;
   text-align: center;
