--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -135,6 +135,7 @@ form textarea {
   border:1px solid #ccc;
   border-radius: 5px;
   width: 100%;
+  max-width: 600px;
   box-sizing: border-box;
   font-size: 1rem;
 }
