--- a/chamber/styles/join-large.css
+++ b/chamber/styles/join-large.css
@@ -7,7 +7,7 @@
 }
 
 :root {
-    --white: #f8f0f0;
+    --white: #88e7ee;
     --p-background: #745332;
     --s-background: #d40c13;
     --highlight: #F1C40F;
