--- a/chamber/styles/join-large.css
+++ b/chamber/styles/join-large.css
@@ -7,9 +7,9 @@
 }
 
 :root {
-    --white: #88e7ee;
-    --p-background: #745332;
-    --s-background: #d40c13;
+    --white: #f7fafa;
+    --p-background: #000004;
+    --s-background: #060404;
     --highlight: #F1C40F;
     --black: #000;
     --ash: #a72424;
